@@ -1,3 +1,8 @@
+2003-05-14  Morten Welinder  <terra@gnome.org>
+
+	* xml-sax-write.c (xml_sax_file_save): Mirror leak fix from
+	xml-io.c.
+
 2003-05-11  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.17
